druckreif so eingereicht

--- a/intro.tex
+++ b/intro.tex
@@ -33,7 +33,7 @@
 
 \Large  A Critical Edition and Annotated Translation of an Early Modern Text on Rājayoga, with a Comparative Analysis of the Complex Yoga Taxonomies from the Same Period\\
 \vspace{0.2in}
-by Nils Jacob Liersch
+by \blackout{Nils Jacob Liersch}
 
 
 \end{center}
@@ -145,25 +145,25 @@ by Nils Jacob Liersch
 \thispagestyle{empty}
 \newpage
 
-\section{Acknowledgements}
-\phantomsection
-\addcontentsline{toc}{chapter}{Acknowledgements}
-\pagestyle{empty} % Verhindert Seitenzahl auf der Seite
-\lettrine{M}{y} interest in the \textit{Tattvayogabindu} stems from my desire to utilise Sanskrit philology to uncover new source texts of yoga traditions and advance our knowledge of the history of yoga. My passion for philological work was inspired by Dr. Patrick McAllister, whose seminar titled ``Text Criticism in Indological Studies'' I attended with great enthusiasm during the winter semester of 2014/2015 at the University of Heidelberg. As an aspiring Indologist, yoga enthusiast, and yoga teacher, the Haṭha Yoga Project (HYP)\footnote{For more information about the ERC-funded \citetitle{hyp-website} (2015-2020), see \url{http://hyp.soas.ac.uk/} (Alternatively: \url{https://web.archive.org/web/20240516171430/http://hyp.soas.ac.uk/}; saved on archive.org: 04.10.2023).}, which began in 2015, was the most exciting Indological venture I could imagine. This research project, funded by the European Research Council and based at SOAS, University of London, with Prof. Dr. James Mallinson as the principal investigator and his team comprising Dr. Mark Singleton, Dr. Jason Birch, Dr. Daniela Bevilaqua, and Dr. S. V. B. K. V. Gupta, aimed primarily at producing critical editions and annotated translations of ten Sanskrit texts of Haṭhayoga. Consequently, I decided to produce a critical edition of the \emph{Gorakṣayogaśāstra}, another early Haṭhayoga text, as part of my master's thesis.
-
-During the work on this edition, I met Dr. Jason Birch at the Yoga Studies Summer School (YSSS) at Jagiellonian University in Krakow, held between 21.07.2017 and 05.08.2017. Since then, he has supported my work in every possible way. My gratitude goes especially to him, as my Indological career would have taken a different path without his help and encouragement. After completing my master's thesis, the results of which I presented at the World Sanskrit Conference 2018 in Vancouver, Canada, I also met Dr. James Mallinson. Soon after, I found myself on the island of Procida in southern Italy, fortunate to be invited to the two-week \emph{Amṛtasiddhi} workshop of the HYP. In Procida, Dr. Jason Birch inspired me to work on the \emph{Tattvayogabindu} and provided me with the first manuscripts of the text he had collected. The exploration of the overarching theme of complex yoga taxonomies, presented right at the beginning of the text, seemed very promising for advancing Indological yoga research. At another HYP workshop in spring 2019, focused on the \emph{Yogabīja} at the University of Marburg, I met Prof. Dr. Jürgen Hanneder, who promptly agreed to supervise my dissertation on the \emph{Tattvayogabindu}. I am very grateful for his continuous support, philological expertise, and encyclopedic knowledge.
-
-The funding for my work resulted from my position in the AHRC and DFG-funded research project for creating a critical edition and translation of the \emph{Haṭhapradīpikā} (2021-2024), the most important premodern text on physical yoga. I especially want to thank Prof. Dr. James Mallinson and Prof. Dr. Jürgen Hanneder, the principal investigators, for hiring me for this project. Naturally, I am very grateful to the AHRC and DFG for the funding. Working on the \emph{Haṭhapradīpikā}, a text with a highly complex transmission, was very enriching and provided numerous opportunities for further developing my philological skills, my knowledge about the yoga texts and particularly stemmatology. I have learned a lot from working with this team of outstanding scholars, including Dr. Jason Birch and Dr. Mitsuyo Demoto.
-
-In the final phase of my dissertation project, I read my critical edition of the \emph{Tattvayogabindu} with Dr. Jason Birch and Dr. Sven Sellmer in online meetings, discussing textual criticism issues. Prof. Dr. James Mallinson and Dr. Jürgen Hanneder joined these meetings whenever time allowed. I am deeply grateful for every suggestion I received during these reading sessions. I would also like to extend my gratitude to Maximilian Mehner and Dr. Charles Li, who consistently supported me with technical questions in the field of Digital Humanities, both in my work on the \textit{Haṭhapradīpikā} and my dissertation project. My thanks also go to Dr. Robert Alessi, who took the time to answer my questions about his Lua\LaTeX\ module \textit{ekdosis} and even developed its functionality further specifically for the \textit{Haṭhapradīpikā} and the \emph{Tattvayogabindu}.
-
-I would like to express my sincere gratitude to Dr. Stanislav Jager, Prof. Dr. Dragomir Dimitrov, Dr. Martin Gansten, and, in particular, Anupam Suman for sharing their thoughts in decoding the \textit{bhūtasāṃkhyā}–date of manuscript \getsiglum{N2}. 
-
-I want to thank Dr. Felix Otter for proofreading the Brajbhāṣā passages translated in this work. My gratitude also extends to Bastian Jantke, with whom I frequently discussed issues of my work and who assisted me with his expertise in the Nepali language in deciphering the colophon of the manuscript \getsiglum{N1}. Thanks to Dr. Dominic Haas for answering my questions about the emergence of the \textit{ajapāgāyatrī} in the supplements of the manuscript \getsiglum{U2}, contributing crucial insights for understanding these passages. I thank Prof. Dr. Shaman Hatley for addressing my inquiries about the mother goddesses in the supplementary material of manuscript \getsiglum{U2}. Prof. Dr. Dominik Goodall answered my questions and provided valuable insights into the tenfold \textit{tattva} system presented in the \emph{Tattvayogabindu}. I am grateful to Prof. Dr. Judit Törzsök for her assistance with my questions regarding the eight-petaled lotus within the twelve-petaled lotus in the heart, the origins of which puzzled me for quite some time. I want to thank Dr. Seth David Powell for sending me a digital copy of his dissertation shortly after its submission. I thank Harshall Bhatt from the University of Baroda for his support in order to obtain a copy of a manuscript of the \emph{Tattvayogabindu}.
-
-Additionally, I would like to thank all the previously unmentioned participants of the doctoral colloquium in Marburg, whose helpful advice contributed to discussing various issues I faced during my work. This includes Prof. Dr. Roland Steiner, Dr. Martin Straube, and Janina Kuhn. I hope to return the support I received in my academic career to those who need it in the future.
-
-My special thanks go to my beloved partner and mother of our two children, Melanie Amaya, who supported me in every possible way to finish this dissertation. I also want to thank my two beloved daughters, Luna and Kaya, who motivated me daily to complete this work.
+%\section{Acknowledgements}
+%\phantomsection
+%\addcontentsline{toc}{chapter}{Acknowledgements}
+%\pagestyle{empty} % Verhindert Seitenzahl auf der Seite
+%\lettrine{M}{y} interest in the \textit{Tattvayogabindu} stems from my desire to utilise Sanskrit philology to uncover new source texts of yoga traditions and advance our knowledge of the history of yoga. My passion for philological work was inspired by Dr. Patrick McAllister, whose seminar titled ``Text Criticism in Indological Studies'' I attended with great enthusiasm during the winter semester of 2014/2015 at the University of Heidelberg. As an aspiring Indologist, yoga enthusiast, and yoga teacher, the Haṭha Yoga Project (HYP)\footnote{For more information about the ERC-funded \citetitle{hyp-website} (2015-2020), see \url{http://hyp.soas.ac.uk/} (Alternatively: \url{https://web.archive.org/web/20240516171430/http://hyp.soas.ac.uk/}; saved on archive.org: 04.10.2023).}, which began in 2015, was the most exciting Indological venture I could imagine. This research project, funded by the European Research Council and based at SOAS, University of London, with Prof. Dr. James Mallinson as the principal investigator and his team comprising Dr. Mark Singleton, Dr. Jason Birch, Dr. Daniela Bevilaqua, and Dr. S. V. B. K. V. Gupta, aimed primarily at producing critical editions and annotated translations of ten Sanskrit texts of Haṭhayoga. Consequently, I decided to produce a critical edition of the \emph{Gorakṣayogaśāstra}, another early Haṭhayoga text, as part of my master's thesis.
+%
+%During the work on this edition, I met Dr. Jason Birch at the Yoga Studies Summer School (YSSS) at Jagiellonian University in Krakow, held between 21.07.2017 and 05.08.2017. Since then, he has supported my work in every possible way. My gratitude goes especially to him, as my Indological career would have taken a different path without his help and encouragement. After completing my master's thesis, the results of which I presented at the World Sanskrit Conference 2018 in Vancouver, Canada, I also met Dr. James Mallinson. Soon after, I found myself on the island of Procida in southern Italy, fortunate to be invited to the two-week \emph{Amṛtasiddhi} workshop of the HYP. In Procida, Dr. Jason Birch inspired me to work on the \emph{Tattvayogabindu} and provided me with the first manuscripts of the text he had collected. The exploration of the overarching theme of complex yoga taxonomies, presented right at the beginning of the text, seemed very promising for advancing Indological yoga research. At another HYP workshop in spring 2019, focused on the \emph{Yogabīja} at the University of Marburg, I met Prof. Dr. Jürgen Hanneder, who promptly agreed to supervise my dissertation on the \emph{Tattvayogabindu}. I am very grateful for his continuous support, philological expertise, and encyclopedic knowledge.
+%
+%The funding for my work resulted from my position in the AHRC and DFG-funded research project for creating a critical edition and translation of the \emph{Haṭhapradīpikā} (2021-2024), the most important premodern text on physical yoga. I especially want to thank Prof. Dr. James Mallinson and Prof. Dr. Jürgen Hanneder, the principal investigators, for hiring me for this project. Naturally, I am very grateful to the AHRC and DFG for the funding. Working on the \emph{Haṭhapradīpikā}, a text with a highly complex transmission, was very enriching and provided numerous opportunities for further developing my philological skills, my knowledge about the yoga texts and particularly stemmatology. I have learned a lot from working with this team of outstanding scholars, including Dr. Jason Birch and Dr. Mitsuyo Demoto.
+%
+%In the final phase of my dissertation project, I read my critical edition of the \emph{Tattvayogabindu} with Dr. Jason Birch and Prof. Dr. Sven Sellmer in online meetings, discussing textual criticism issues. Prof. Dr. James Mallinson and Dr. Jürgen Hanneder joined these meetings whenever time allowed. I am deeply grateful for every suggestion I received during these reading sessions. I would also like to extend my gratitude to Maximilian Mehner and Dr. Charles Li, who consistently supported me with technical questions in the field of Digital Humanities, both in my work on the \textit{Haṭhapradīpikā} and my dissertation project. My thanks also go to Dr. Robert Alessi, who took the time to answer my questions about his Lua\LaTeX\ module \textit{ekdosis} and even developed its functionality further specifically for the \textit{Haṭhapradīpikā} and the \emph{Tattvayogabindu}.
+%
+%I would like to express my sincere gratitude to Dr. Stanislav Jager, Prof. Dr. Dragomir Dimitrov, Dr. Martin Gansten, and, in particular, Anupam Suman for sharing their thoughts in decoding the \textit{bhūtasāṃkhyā}–date of manuscript \getsiglum{N2}. 
+%
+%I want to thank Dr. Felix Otter for proofreading the Brajbhāṣā passages translated in this work. My gratitude also extends to Bastian Jantke, with whom I frequently discussed issues of my work and who assisted me with his expertise in the Nepali language in deciphering the colophon of the manuscript \getsiglum{N1}. Thanks to Dr. Dominic Haas for answering my questions about the emergence of the \textit{ajapāgāyatrī} in the supplements of the manuscript \getsiglum{U2}, contributing crucial insights for understanding these passages. I thank Prof. Dr. Shaman Hatley for addressing my inquiries about the mother goddesses in the supplementary material of manuscript \getsiglum{U2}. Prof. Dr. Dominik Goodall answered my questions and provided valuable insights into the tenfold \textit{tattva} system presented in the \emph{Tattvayogabindu}. I am grateful to Prof. Dr. Judit Törzsök for her assistance with my questions regarding the eight-petaled lotus within the twelve-petaled lotus in the heart, the origins of which puzzled me for quite some time. I want to thank Dr. Seth David Powell for sending me a digital copy of his dissertation shortly after its submission. I thank Harshall Bhatt from the University of Baroda for his support in order to obtain a copy of a manuscript of the \emph{Tattvayogabindu}.
+%
+%Additionally, I would like to thank all the previously unmentioned participants of the doctoral colloquium in Marburg, whose helpful advice contributed to discussing various issues I faced during my work. This includes Prof. Dr. Roland Steiner, Dr. Martin Straube, and Janina Kuhn. I hope to return the support I received in my academic career to those who need it in the future.
+%
+%My special thanks go to my beloved partner and mother of our two children, Melanie Amaya, who supported me in every possible way to finish this dissertation. I also want to thank my two beloved daughters, Luna and Kaya, who motivated me daily to complete this work.
 
 \mainmatter
 \pagestyle{defaultstyle}
@@ -362,7 +362,7 @@ Rāmacandra then mentions the characteristics of the person unsuitable for the s
   \begin{quote}
     Because of listening to the lovely songs of charming women, looking at the beauty of very lovely women, smelling the fragrance of camphor and musk, touching objects that make the mind relax and that are extremely soft and superb, [because of all these things] he experiences exquisite beauty in the mind.
 
-    As a result of enjoying such things, seeing good and bad places of many countries, speaking sweetly with friends, and speaking harshly to enemies, joyful excitement and hatred do not arise in his mind. This person is known as a teacher who conveys the instruction of the Lord (\textit{īśvara}). For his own amusement, he speaks and moves. The mind is equanimous in both existence and non-existence. He, whose mind is immered in inherent bliss, does not apply force[-ful yoga] (\textit{haṭha}) in any situation.\footnote{The more literal translation of \textit{kasyāṃcid vārttāyāṃ haṭhaṃ na karoti} — ``He does not commit violence in any business.'' — seems both appealing and sensible. However, in light of the contrasting forceful yogic practice, which involves stabilizing posture, breath, and gaze for the non-siddha practitioner, the context here suggests that the suffix °\textit{yoga} should be added to the preceding \textit{haṭha}°. This would indicate a form of practice or yoga that is intentionally forceful or effortful, in contrast to Sahajayoga, which arises naturally without force.}
+    As a result of enjoying such things, seeing good and bad places of many countries, speaking sweetly with friends, and speaking harshly to enemies, joyful excitement and hatred do not arise in his mind. This person is known as a teacher who conveys the instruction of the Lord (\textit{īśvara}). For his own amusement, he speaks and moves. The mind is equanimous in both existence and non-existence. He, whose mind is immered in inherent bliss, does not apply force[-ful yoga] (\textit{haṭha}) in any situation.\footnote{The more literal translation of \textit{kasyāṃcid vārttāyāṃ haṭhaṃ na karoti} — ``He does not commit violence in any business.'' — seems both appealing and sensible. However, in light of the contrasting forceful yogic practice, which involves stabilising posture, breath, and gaze for the non-siddha practitioner, the context here suggests that the suffix °\textit{yoga} should be added to the preceding \textit{haṭha}°. This would indicate a form of practice or yoga that is intentionally forceful or effortful, in contrast to Sahajayoga, which arises naturally without force.}
 
     By a [regular] person, the gaze shall be stabilised. The posture shall be stabilised. The breath shall be stabilised. Any such a rule is not prescribed for the accomplished [person]. When by means of mind and breath, the natural bliss appears through one’s own true nature; it is called Sahajayoga (``natural yoga'') [in this system] of Rajayoga. This is the explanation for those named \textit{cakravartin} (``Universal Ruler''). 
 \end{quote}
@@ -421,7 +421,6 @@ The third painting (Figure \ref{fig:royalyogi3}) is a miniature from circa the 1
 \end{landscape}
 
 In summary, it can be noted that the \emph{Tattvayogabindu}, composed before 1591~CE, constitutes the oldest extant text to conceive of Rājayoga unequivocally as ``the Yoga fit for kings''.
-\newpage
 
 \section{Editorial matters}
 
@@ -429,9 +428,9 @@ In summary, it can be noted that the \emph{Tattvayogabindu}, composed before 159
 
 \subsection{Description of the consulted witnesses}\label{witnessesdescr}
 
-The official commencement of the funded period of this dissertation project on 15 March 2021 coincided with the numerous lockdowns and travel restrictions imposed due to the COVID-19 pandemic. Consequently, during the phase of the dissertation when additional manuscripts could have been collected, I was confined to my desk at home.
+The official commencement of the funded period of the dissertation project from which this book emerged, on 15 March 2021, coincided with the extensive lockdowns and travel restrictions imposed in response to the COVID-19 pandemic. As a result, during the phase of the dissertation in which additional manuscripts might otherwise have been consulted, I was largely confined to desk-based work at home.
 
-This is why, at the time of submitting this dissertation, I had been able to consult only the following witnesses: \getsiglum{B}, \getsiglum{D}, \getsiglum{E}, \getsiglum{L}, \getsiglum{N1}, \getsiglum{N2}, \getsiglum{P}, \getsiglum{U1}, and \getsiglum{U2}. Approximately two weeks after successfully defending my dissertation, I took up a position on the ERC-funded ``Saving the Kashmirian Sanskrit Heritage''-Project (Ka-Sa-Ha-Rakṣā) at the Philipps-Universität Marburg. For this project, I undertook a research trip through northern India in early 2025, during which I acquired not only a substantial number of digital scans and photographs of Kashmiri Śāradā manuscripts but also additional witnesses to the text edited in this dissertation. During this trip I was able to obtain eight further witnesses: \getsiglum{C}, \getsiglum{J}, \getsiglum{K1}, \getsiglum{K2}, \getsiglum{K3}, \getsiglum{P2}, \getsiglum{S}, and \getsiglum{V}. As the edition had already reached an advanced stage, I decided to collate only those new witnesses likely to be of real significance. I therefore transcribed each of them, applied various methods of computer-assisted stemmatics, integrated the witnesses into the stemma, and carefully re-examined crucial passages of the text where further manuscript evidence might prove helpful. In the end, only two manuscripts—\getsiglum{J} and \getsiglum{K1}—provided material of genuine value: they confirmed readings previously attested only once and, in several places, rendered a number of earlier emendations unnecessary. The remaining witnesses were not worth the considerable effort of collation, as they supplied no useful variants and merely introduced additional scribal errors.
+This is why, at the time of submitting this dissertation, I had been able to consult the following witnesses: \getsiglum{B}, \getsiglum{D}, \getsiglum{E}, \getsiglum{L}, \getsiglum{N1}, \getsiglum{N2}, \getsiglum{P}, \getsiglum{U1}, and \getsiglum{U2}. Approximately two weeks after successfully defending the dissertation, I took up a position on the ERC-funded \blackout{``Saving the Kashmirian Sanskrit Heritage''}-Project \blackout{(Ka-Sa-Ha-Rakṣā)} at the \blackout{Philipps-Universität Marburg}. For this project, I undertook a research trip through northern India in early 2025, during which I acquired not only a substantial number of digital scans and photographs of Kashmiri Śāradā manuscripts but also additional witnesses to the text edited in this dissertation. During this trip I was able to obtain eight further witnesses: \getsiglum{C}, \getsiglum{J}, \getsiglum{K1}, \getsiglum{K2}, \getsiglum{K3}, \getsiglum{P2}, \getsiglum{S}, and \getsiglum{V}. As the edition had already reached an advanced stage, I decided to collate only those new witnesses likely to be of real significance. I therefore transcribed each of them, applied various methods of computer-assisted stemmatics, integrated the witnesses into the stemma, and carefully re-examined crucial passages of the text where further manuscript evidence might prove helpful. In the end, only two manuscripts—\getsiglum{J} and \getsiglum{K1}—provided material of genuine value: they confirmed readings previously attested only once and, in several places, rendered a number of earlier emendations unnecessary. The remaining witnesses were not worth the considerable effort of collation, as they supplied no useful variants and merely introduced additional scribal errors.
 
 \vspace{0.25cm}
 \begin{description}
@@ -825,12 +824,12 @@ Taking the text as a whole into account, the title \textit{Tattvayogabindu} make
     \caption{The hypothesis of transmission of the \emph{Tattvayogabindu}'s title.}
      \phantomsection\label{fig:titel-hypothese}
 \end{figure}
+\newpage
 
 \subsection{Reconstruction of the archetypal final rubric}
 \label{archetypalcolo}
 
-
-The final rubric of the text in the manuscripts falls into two groups corresponding to the \beta- and \gamma-groups identified in the stemmatic analysis (p.~\pageref{stemma}). A close examination of the final rubrics reveals a gradual progression of corruptions in the transmission from \beta~ to \gamma.
+The final rubric of the text in the manuscripts falls into two groups corresponding to the \beta- and \gamma-groups identified in the stemmatic analysis (p.~\pageref{stemma}). A close examination of the final rubrics reveals a gradual progression of corruptions in the transmission from \beta~ to \gamma~. The figure \ref{fig:colosynop} shows a synoptic representation of the final rubrics, which can optimally illustrate the split of the two groups.
 
 \begin{landscape}
 \thispagestyle{empty}
@@ -990,7 +989,6 @@ In the third register of the critical apparatus, I list relevant parallel passag
   
 \end{itemize}
 
-\newpage 
 \section{Stemmatic analysis}
  \phantomsection\label{stemma}
 
@@ -1439,6 +1437,11 @@ In the translation I occasionally introduce paragraph breaks that are not marked
 \item YK : \emph{Yogakarṇikā}% 
 \item YSv : \emph{Yogasvarodaya}
 \end{itemize}
+\clearpage
+\newpage
+\thispagestyle{empty}
+\clearpage
+\newpage
 
 \chapter[Critical Edition \& Annotated Translation of the \emph{Tattvayogabindu}]{The \emph{Tattvayogabindu} of Rāmacandra \\ \huge  
 Critical Edition \& Annotated Translation}
@@ -5893,7 +5896,7 @@ sādhakasya
      \xmlhead[h14]{[XIV. The upper focus]}
      \phantomsection\label{urdhvalaksyatrans} 
   \begin{tlate}[p14_01]
-\noindent At first, the upper focus is explained. The gaze is on the centre of the sky.\footnote{This could be the Zenith. See \citetitle[1858: 179]{petersburger3}.} And then, having directed the mind upwards, it is fixed [there]. As a result of stabilizing this focus, unity of the gaze with the splendour of the highest lord arises. And then, some object that has not been seen before arises in the centre of the sky. That [object] arises in the range of sight of the practitioner. This alone is the upper focus.\footnote{Sundardās shares the concept of \textit{ūrdhvalakṣ(y)a} as fixing the gaze in the sky is in his \citetitle{sarvangayoga} 3.27: \textit{ūrddha lakṣa karai ihīṃ bhāṃtī} | \textit{duṣṭyākāśa rahai dina rātī} | \textit{bibidha prakāra hoi ujiyārā} | \textit{gopi padāratha dīsahiṃ sārā} ||}\fnsep\footnote{A similar practice is presented in \citetitle{bäumer2013} 84: \textit{ākāśaṃ vimalam paśyan kṛtvā dṛṣṭiṃ nirantarām} | \textit{stabdhātmā tatkṣaṇād devi bhairavaṃ vapur āpnuyāt} || Although the term \textit{lakṣya} is not used, the central elements of the practice are found here: the gaze is constantly fixed on the sky, establishing a connection with the divine. See also \citetitle{mallinson2007} 5.30-31.}
+\noindent At first, the upper focus is explained. The gaze is on the centre of the sky.\footnote{This could be the Zenith. See \citetitle[1858: 179]{petersburger3}.} And then, having directed the mind upwards, it is fixed [there]. As a result of stabilising this focus, unity of the gaze with the splendour of the highest lord arises. And then, some object that has not been seen before arises in the centre of the sky. That [object] arises in the range of sight of the practitioner. This alone is the upper focus.\footnote{Sundardās shares the concept of \textit{ūrdhvalakṣ(y)a} as fixing the gaze in the sky is in his \citetitle{sarvangayoga} 3.27: \textit{ūrddha lakṣa karai ihīṃ bhāṃtī} | \textit{duṣṭyākāśa rahai dina rātī} | \textit{bibidha prakāra hoi ujiyārā} | \textit{gopi padāratha dīsahiṃ sārā} ||}\fnsep\footnote{A similar practice is presented in \citetitle{bäumer2013} 84: \textit{ākāśaṃ vimalam paśyan kṛtvā dṛṣṭiṃ nirantarām} | \textit{stabdhātmā tatkṣaṇād devi bhairavaṃ vapur āpnuyāt} || Although the term \textit{lakṣya} is not used, the central elements of the practice are found here: the gaze is constantly fixed on the sky, establishing a connection with the divine. See also \citetitle{mallinson2007} 5.30-31.}
     \flushpage 
   \end{tlate}
   \end{translation}
@@ -6165,7 +6168,7 @@ maraṇa\app{\lem[wit={D,J,K1,N1}, alt={°trāso}]{trāso}
                     \phantomsection\label{adholaksyatrans}                  
     \begin{tlate}[p15_01]
       \noindent
-    Now, the lower focus. One should stabilize the gaze up to twelve finger breadths above of the nose. Alternatively, one should stabilize the gaze onto the tip of the nose. The gaze becomes still due to the stabilizing of the two foci. The breath becomes stable. Lifespan increases.\footnote{In Sundardās's \citetitle{sarvangayoga} 2.26 (Ed. p. 104), one finds the following verse with a similar concept. He shares the technique of fixing the gaze onto the nose and the notion of the breath becoming stabilised: \textit{prathamahīṃ adho lakṣa kauṃ jānaiṃ} | \textit{nāśā agra dṛṣṭi sthira ānaiṃ} | \textit{yātoṃ mana pavanā thira hoī} | \textit{adho lakṣa jo sādhai koī} ||}\fnsep\footnote{In his \citetitle{hathasamketacandrikachennai}, Sundaradeva adds further techniques to the category of \textit{adholakṣya} at this point of the text. For the reconstructed passage (based on ORI B220, GOML R3239, and MMPP 2244) and its translation, see p.\pageref{samketaadd1}.}
+    Now, the lower focus. One should stabilize the gaze up to twelve finger breadths above of the nose. Alternatively, one should stabilize the gaze onto the tip of the nose. The gaze becomes still due to the stabilising of the two foci. The breath becomes stable. Lifespan increases.\footnote{In Sundardās's \citetitle{sarvangayoga} 2.26 (Ed. p. 104), one finds the following verse with a similar concept. He shares the technique of fixing the gaze onto the nose and the notion of the breath becoming stabilised: \textit{prathamahīṃ adho lakṣa kauṃ jānaiṃ} | \textit{nāśā agra dṛṣṭi sthira ānaiṃ} | \textit{yātoṃ mana pavanā thira hoī} | \textit{adho lakṣa jo sādhai koī} ||}\fnsep\footnote{In his \citetitle{hathasamketacandrikachennai}, Sundaradeva adds further techniques to the category of \textit{adholakṣya} at this point of the text. For the reconstructed passage (based on ORI B220, GOML R3239, and MMPP 2244) and its translation, see p.\pageref{samketaadd1}.}
     This pair is also taught as an external focus.\footnote{This statement associates the two practices of \textit{adholakṣya} with \textit{bāhyalakṣya}, which is described later on in the text. Indeed, these later descriptions instruct the practitioner to focus on one of the five elements at various distances in front of the nose or above the head (cf. p. \pageref{bahya}).} [Then] the focus of emptiness, which is like space, should be executed internally and externally.\footnote{The description undoubtedly derives from the \textit{Yogasvarodaya} as quoted in the \citetitle{ramatosana} (Ed. p. 834), where it is declared a practice of \textit{antaralakṣ(y)a}. Rāmacandra extracts this passage from his source text and locates this practice within the \textit{adholakṣya} category.} The fear of death does not arise due to meditation on the void in all states - while eating, moving, waking [and] at the time of rest.\footnote{The translation of \textit{sthitikāle} as ``time of rest'' is confirmed by the four states mentioned in the YSv (cf. sources). The formulation \textit{sthitikāle} is Rāmacandra's rendering of \textit{suṣupteṣu}.}\fnsep\footnote{The concept of five \textit{lakṣ(y)a}s appears only in the lost \textit{Yogasvarodaya} and from there made its way into \citetitle{ramatosana}, \citetitle{yogakarnika} and \textit{Tattvayogabindu}. The other texts including it are \citetitle{sarvangayoga}, \citetitle{hathasamketacandrikamysore} and \citetitle{yogacandrika}. In those texts, this practice becomes a genuine yoga: Lakṣ(y)yoga. If one encounters the concept of three \textit{lakṣ(y)a} as found in \citetitle{netratantra} (cf. 7.1), \citetitle{shivayogapradipika} (cf. 4.36-50), \citetitle{mandalabrah} (cf. 2.6-2.14) or \citetitle{advaya} (Ed. pp. 3-5) etc. it is never declared as an own type of yoga.}
     %\flushpage
     \end{tlate}
@@ -13515,7 +13518,7 @@ bandhanaṃ
 
       \hspace{1.5em} The thirteenth is the support of the nose. When that is set as the focus, the mind becomes stable.\footnote{The majority of texts teach either the nose, the base of the nose as in \citetitle{shivayogapradipika} (\textit{ghrāṇamūla}) and \citetitle{hathatattvakaumudi} (\textit{ghrāṇapada}), or the tip of the nose (\textit{nāsāgra}) as the \citetitle{ssplonavla} and \citetitle{yogatarangini}. Whereas \textit{Netroddyota}, \citetitle{saradaavalon} and \citetitle{jyotsna} teach the place in between the brows as the thirteenth \textit{ādhāra}.}
 
-      \hspace{1.5em} The fourteenth is the support of the vital wind at the bridge of the nose. As a result of stabilizing the gaze therein, one's own brilliance becomes apparent within six months. When the brilliance has manifested the mundane bond breaks.\footnote{\textit{Yogasvarodaya} and \citetitle{ssplonavla} provide the term \textit{kapāṭādhāra}. \citetitle{yogatarangini} teaches the base of the nose as the fourteenth \textit{ādhāra}. All other texts teach fixing the mind and the breath at the forehead. \textit{Netroddyota} calls this place at the forehead ``a wish-fulfilling jewel with its abode at the crossroads of the four channels'' (\textit{cintāmaṇyabhidhānākhyaś catuṣpathanivāsi yat}).}               
+      \hspace{1.5em} The fourteenth is the support of the vital wind at the bridge of the nose. As a result of stabilising the gaze therein, one's own brilliance becomes apparent within six months. When the brilliance has manifested the mundane bond breaks.\footnote{\textit{Yogasvarodaya} and \citetitle{ssplonavla} provide the term \textit{kapāṭādhāra}. \citetitle{yogatarangini} teaches the base of the nose as the fourteenth \textit{ādhāra}. All other texts teach fixing the mind and the breath at the forehead. \textit{Netroddyota} calls this place at the forehead ``a wish-fulfilling jewel with its abode at the crossroads of the four channels'' (\textit{cintāmaṇyabhidhānākhyaś catuṣpathanivāsi yat}).}               
       \flushpage 
     \end{tlate}
   \end{translation}
@@ -13661,7 +13664,7 @@ sarvajño
   \begin{translation}
     \begin{tlate}[p30_06]
 
-      \hspace{1.5em} The fifteenth support is situated in the middle of the eyebrows. As a result of stabilizing the gaze therein, ten million rays of light sparkle.\footnote{\citetitle{shivayogapradipika} teaches gazing above the brows, which quickly brings about the appearance of light. \citetitle{ssplonavla} calls it the ``support of the forehead'' (\textit{lalāṭādhāra}), in which the practitioner shall visualize a cluster of light. \citetitle{yogatarangini} teaches the centre of the brows. By concentrating on this point, a direct vision of many-rayed light occurs, and one’s mind will merge into the sun-sky (\textit{etasya dṛḍhābhyāse sūryākāśo līyate} |). \citetitle{hathatattvakaumudi} calls it the ``support of ether'' (\textit{vyomādhāra}) and explains that by gazing at it, everything is perceived as light. However, \textit{Netratantra} teaches the \textit{brahmarandhra} as the fifteenth support. \textit{Netroddyota} declares it as the ``support of the fourth state'' (\textit{turyādhāra}). \citetitle{saradaavalon} and \citetitle{jyotsna} also teach the top of the head (\textit{mūrdhan}) as the fifteenth.}
+      \hspace{1.5em} The fifteenth support is situated in the middle of the eyebrows. As a result of stabilising the gaze therein, ten million rays of light sparkle.\footnote{\citetitle{shivayogapradipika} teaches gazing above the brows, which quickly brings about the appearance of light. \citetitle{ssplonavla} calls it the ``support of the forehead'' (\textit{lalāṭādhāra}), in which the practitioner shall visualize a cluster of light. \citetitle{yogatarangini} teaches the centre of the brows. By concentrating on this point, a direct vision of many-rayed light occurs, and one’s mind will merge into the sun-sky (\textit{etasya dṛḍhābhyāse sūryākāśo līyate} |). \citetitle{hathatattvakaumudi} calls it the ``support of ether'' (\textit{vyomādhāra}) and explains that by gazing at it, everything is perceived as light. However, \textit{Netratantra} teaches the \textit{brahmarandhra} as the fifteenth support. \textit{Netroddyota} declares it as the ``support of the fourth state'' (\textit{turyādhāra}). \citetitle{saradaavalon} and \citetitle{jyotsna} also teach the top of the head (\textit{mūrdhan}) as the fifteenth.}
 
       \hspace{1.5em} The sixteenth is the eye support. It is caused to be rubbed with the fingertips. As a result of that practice, some light arises from the earth[-element].\footnote{Perhaps, \textit{tejas} arises from \textit{pṛthvī}, because its origin is unknown and in Śaiva Tantras the earth as the bottom \textit{tattva} contains the entire \textit{brahmāṇḍa}, cf. \citetitle[2013: 501]{tantrika3}.} That entire light becomes the object of vision. As a result of seeing that, the person becomes omniscient.\footnote{Rāmacandra's description of \textit{netrādhāra} is very similar to \citetitle{yogatarangini}, which also instructs the yogin to rub the eyes with the fingers in order to generate the perception of a light. Other texts have some noteworthy differences: \citetitle{shivayogapradipika} teaches to fix [the gaze] above the eyes. Due to that, the yogin sees a mass of light in the corner of his eyes. \citetitle{hathatattvakaumudi} teaches to meditate upon the eyes. By seeing a mass of light in the corner of the eyes, one soon becomes like Śiva. \citetitle{ssplonavla} teaches to visualize the pair of the lotus feet of the revered teacher (\textit{śrīgurucaraṇāmbujayugmaṃ}) at the \textit{brahmarandhra} in which the \textit{ākāśacakra} is situated. The \citetitle{jyotsna}, too, lists the \textit{brahmarandhra}. \citetitle{saradaavalon}\nocite{avalon} and \textit{Netratantra} teach the \textit{dvādaśānta} as the sixteenth support. \citetitle{tantrika3}, p. 210. \textit{Netroddyota} explains: \textit{nāḍyādhāraḥ paraḥ sūkṣmo ghanavyāptiprabodhakaḥ} || ``The support of the [central?] channel is the highest subtle one which awakens complete pervasion.''}
       \flushpage 
@@ -25688,7 +25691,7 @@ Thus, it is clear that no direct conceptual connection exists between the Caryā
 
 The comparative analysis of Caryāyoga within the intricate and multifaceted texts of early modern yoga taxonomies reveals two distinct models. Additionally, the initial question regarding any connection between Caryāyogas and Carcāyoga was addressed, and a hypothesis was formulated on the original form of Caryāyoga.
 
-In the \textit{Tattvayogabindu}, Caryāyoga is described as stabilizing the mind in the self. This rather banal description was likely an attempt to define Caryāyoga as mentioned in the initial list. It is plausible that Rāmacandra invented this description without any real understanding of Caryāyoga, as it seems to be derived from a description of Rājayoga in his source text. It appears highly unlikely that this form of Caryāyoga was ever practiced by anyone.
+In the \textit{Tattvayogabindu}, Caryāyoga is described as stabilising the mind in the self. This rather banal description was likely an attempt to define Caryāyoga as mentioned in the initial list. It is plausible that Rāmacandra invented this description without any real understanding of Caryāyoga, as it seems to be derived from a description of Rājayoga in his source text. It appears highly unlikely that this form of Caryāyoga was ever practiced by anyone.
 
 Caryāyoga is absent from the testimony of the \textit{Yogasvarodaya} and is not listed therein. However, the \textit{Yogakarṇikā}, which extensively quotes the \textit{Yogasvarodaya}, suggests that Caryāyoga was originally closely related to the practices within the \textit{caryāpāda}s of the Śaiva Āgamas, and thus consisted of daily ritual conduct as part of the yogic routine.
 
