--- a/preamble.tex
+++ b/preamble.tex
@@ -696,3 +696,4 @@ surname=Liersch]
 
 \newcommand{\hardbreak}{\penalty -10000\pagebreak[4]\newpage}
 \usepackage{pdflscape} % in der Präambel
+\usepackage{censor}
